correct homepage url

--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/davidpadbury/davidpadbury.github.io/issues"
   },
-  "homepage": "https://github.com/davidpadbury/davidpadbury.github.io#readme"
+  "homepage": "http://davidpadbury.com"
 }
