--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "davidpadbury.com Website",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "babel-node index.js",
     "test": "echo \"no tests\";exit 1;"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "http://davidpadbury.com",
   "dependencies": {
+    "babel": "^5.8.20",
     "express": "^4.13.3"
   }
 }
