--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "dependencies": {
     "babel": "^5.8.20",
     "express": "^4.13.3"
+  },
+  "devDependencies": {
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
+    "gulp-imagemin": "^2.3.0",
+    "imagemin-jpeg-recompress": "^4.3.0"
   }
 }
