--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "devDependencies": {
     "del": "^1.2.0",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^2.3.0",
+    "gulp-minify-css": "^1.2.0",
     "imagemin-jpeg-recompress": "^4.3.0",
     "mkdirp-promise": "^1.0.2",
     "request": "^2.60.0",
