--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-minify-css": "^1.2.0",
+    "gulp-uglify": "^1.2.0",
     "imagemin-jpeg-recompress": "^4.3.0",
     "mkdirp-promise": "^1.0.2",
     "request": "^2.60.0",
