--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "files-hash": "^1.0.1"
   },
   "devDependencies": {
+    "common-env": "^4.1.0",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
@@ -32,10 +33,13 @@
     "gulp-imagemin": "^2.3.0",
     "gulp-minify-css": "^1.2.0",
     "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
     "imagemin-jpeg-recompress": "^4.3.0",
     "mkdirp-promise": "^1.0.2",
     "request": "^2.60.0",
     "request-promise": "^0.4.3",
+    "s3": "^4.4.0",
+    "throat": "^2.0.2",
     "unzip": "^0.1.11"
   }
 }
