--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "homepage": "http://davidpadbury.com",
   "dependencies": {
     "babel": "^5.8.20",
+    "caniuse-api": "^1.3.2",
     "compression": "^1.5.2",
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
     "files-hash": "^1.0.1",
     "randomstring": "^1.0.7",
-    "spdy": "^2.0.4"
+    "spdy": "^2.0.4",
+    "useragent": "^2.1.7"
   },
   "devDependencies": {
     "common-env": "^5.0.0",
