trying pm2s built in babel rather than using an interpreter

--- a/ecosystem.json5
+++ b/ecosystem.json5
@@ -3,7 +3,7 @@
        {
             name: "davidpadbury.com",
             script: "index.js",
-            "exec_interpreter": "babel-node",
+            "next-gen-js": true,
             env: {
             },
             env_production : {
