correcting next gen js flag

--- a/ecosystem.json5
+++ b/ecosystem.json5
@@ -3,7 +3,7 @@
        {
             name: "davidpadbury.com",
             script: "index.js",
-            "next-gen-js": true,
+            "next_gen_js": true,
             env: {
             },
             env_production : {
