--- a/ecosystem.json5
+++ b/ecosystem.json5
@@ -7,7 +7,10 @@
             env: {
             },
             env_production : {
-                NODE_ENV: "production"
+                NODE_ENV: "production",
+                REDIRECT_URL: "https://45.55.54.184:8443",
+                RDIRECT_PORT: 8080,
+                PORT: 8433
             }
        },
     ],
