--- a/ecosystem.json5
+++ b/ecosystem.json5
@@ -9,8 +9,8 @@
             env_production : {
                 NODE_ENV: "production",
                 REDIRECT_URL: "https://45.55.54.184",
-                RDIRECT_PORT: 8080,
-                PORT: 8433
+                REDIRECT_PORT: 8080,
+                PORT: 8443
             }
        },
     ],
@@ -25,7 +25,7 @@
             ref  : "origin/master",
             repo : "git@bitbucket.org:davidpadbury/davidpadbury.com.git",
             path : "/var/www/davidpadbury.com",
-            "post-deploy" : "source /var/www/.davidpadbury.com.secrets && npm install && `npm bin`/gulp clean build && pm2 startOrRestart ecosystem.json5 production"
+            "post-deploy" : "source /var/www/.davidpadbury.com.secrets && npm install && `npm bin`/gulp clean build && pm2 startOrRestart ecosystem.json5 --env production"
         }
     }
 }
