--- a/ecosystem.json5
+++ b/ecosystem.json5
@@ -8,7 +8,7 @@
             },
             env_production : {
                 NODE_ENV: "production",
-                REDIRECT_URL: "https://45.55.54.184",
+                REDIRECT_URL: "https://davidpadbury.com",
                 REDIRECT_PORT: 8080,
                 PORT: 8443
             }
