--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "davidpadbury.com",
+  "name": "pittfagan.com",
   "version": "1.0.0",
-  "description": "davidpadbury.com Website",
+  "description": "pittfagan.com personalebsite",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node index.js",
+    "start": "node index.js",
     "test": "echo \"no tests\";exit 1;"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/davidpadbury/davidpadbury.github.io.git"
+    "url": "git@github.com:Pshrub/pittfagan.com.git"
   },
-  "author": "David Padbury <david@davidpadbury.com>",
+  "author": "Pitt Fagan <pittfagan@yahoo.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/davidpadbury/davidpadbury.github.io/issues"
+    "url": "https://github.com/pittfagan/pittfagan.github.io/issues"
   },
-  "homepage": "http://davidpadbury.com",
+  "homepage": "http://pittfagan.com",
   "dependencies": {
     "babel": "^5.8.20",
     "caniuse-api": "^1.3.2",
